# StreamingHallucination

./: .gitignore  LICENSE  README.md  pyproject.toml
dataset/: DATASET.md  generate.py  merge.py  tag.py  validate.py
src/: extract_features.py  process.py  train.py  train_teacher.py  visualize.py
tag_validation/: advanced_validation.py  analyze_tags.py  compare_datasets.py
