[project]
name = "streaming-hallucination"
version = "0.1.0"
description = "Streaming Hallucination Detection in Long Chain-of-Thought Reasoning"
requires-python = ">=3.10,<3.12"

dependencies = [
  "torch==2.3.0",
  "transformers==4.50.3",
  "accelerate==1.10.1",
  "numpy==2.2.6",
  "scikit-learn==1.6.1",
  "orjson==3.11.3",
  "matplotlib==3.10.1",
  "tqdm==4.67.1",
  "huggingface-hub==0.34.4",
  "requests==2.32.5",
  "scipy==1.15.2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
